--- a/switchboard-platforms-start/package.json
+++ b/switchboard-platforms-start/package.json
@@ -14,6 +14,7 @@
     "decentraland-ecs": "latest"
   },
   "dependencies": {
+    "@dcl/ui-utils": "^1.0.0",
     "decentraland-ecs-utils": "^1.1.4"
   }
 }
